--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -39,6 +39,10 @@
     color: black;
     text-decoration: none;
 }
+.header-heading {
+    font-family: "Arial";
+    font-size: 30px;
+}
 
 @media screen and (min-width: 768px) {
     .span-children {
